--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div class="col-12 col-sm-8 col-md-9">
           <div class="card p-3 mb-3">
-            <%= @topic.content %>
+            <%= sanitize @topic.content %>
           </div>
         </div>
 
