ajouté text editor sur les commentaires

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -42,7 +42,7 @@
           </div>
           <div class="col-12 col-sm-8 col-md-9">
             <div class="card p-3 mb-3">
-              <%= answer.content %>
+              <%= sanitize answer.content %>
             </div>
           </div>
         <% end %>
