--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -130,7 +130,7 @@
       },
       yAxis: {
         title: {
-          text: 'Kg / collaborateur·rice / jour moyen'
+          text: 'Kg/collab./j'
         }
       },
       tooltip: {
@@ -138,7 +138,7 @@
         useHTML: true,
         // headerFormat: '<small>{point.key}</small><table>',
         pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b>: </td>' +
-            '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
+            '<td style="text-align: right">{point.y} Kg/collab./j</td></tr><br>',
         footerFormat: '</table>',
         valueDecimals: 2
       },
@@ -165,7 +165,7 @@
       },
       yAxis: {
         title: {
-          text: 'Kg / collaborateur·rice / jour moyen'
+          text: 'Kg/collab./j'
         }
       },
       tooltip: {
@@ -173,7 +173,7 @@
         useHTML: true,
         // headerFormat: '<small>{point.key}</small><table>',
         pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b>: </td>' +
-            '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
+            '<td style="text-align: right">{point.y} Kg/collab./j </td></tr><br>',
         footerFormat: '</table>',
         valueDecimals: 2
       },
