--- a/app/views/charts/show.js.erb
+++ b/app/views/charts/show.js.erb
@@ -16,7 +16,7 @@ Highcharts.chart('companychart', {
   },
   yAxis: {
     title: {
-      text: 'Kg / collaborateur·rice / jour moyen'
+      text: 'Kg/collab./j'
     }
   },
   tooltip: {
@@ -24,7 +24,7 @@ Highcharts.chart('companychart', {
     useHTML: true,
     // headerFormat: '<small>{point.key}</small><table>',
     pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b>: </td>' +
-        '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
+        '<td style="text-align: right">{point.y} Kg/collab./j</td></tr><br>',
     footerFormat: '</table>',
     valueDecimals: 2
   },
