--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,4 +1,6 @@
-<div class="wrapper down">
+<% unless current_user %>
+  <div class="wrapper down">
+<% end %>
   <div class="container">
     <div class="container-ekologeek bg-white container-padding my-5">
       <h2 class="header text-primary text-center pt-5 mt-5">Ekolo[geek]</h2>
