--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -7,8 +7,8 @@
           <div class="topic-index-time"><%= time_ago_in_words topic.created_at %> - <%= topic.user.company.name %></div>
           <div class="topic-index-time"><i class="fas fa-comment-alt mr-1"></i><b><%= topic.answers.count %></b></div>
         </div>
-        <div class="d-flex align-items-center justify-content-between card-content-topic">
-          <p class="topic-index-text flex-grow text-muted"><%= sanitize topic.content.truncate_words(15, omission: '...') %></p>
+        <div class="d-flex align-items-center justify-content-between card-content-topic text-muted">
+          <p class="topic-index-text flex-grow text-muted"><%= sanitize topic.content.truncate_words(15, omission: '...'), class:"text-muted" %></p>
         </div>
       </div>
     </div>
