--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,11 +1,11 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel" data-interval="5000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag "vote.jpg", class:"d-block w-100", alt:"Second slide" %>
+      <%= image_tag "mecener.jpg", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "https://www.harmonie-boost.fr/home/2059/projet/2657", class:"btn btn-secondary text-white responsive-btn box", target: :blank do %>
-          <h5><b>Votez maintenant !</b></h5>
+          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
+          <h5><b>Le Défi a besoin de vous !</b></h5>
           <p class="mb-0">Soutenez le projet</p>
           <% end %>
         </div>
