--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,14 +26,11 @@
 
     <div class="my-4 social-links">
       <div class="d-flex justify-content-around">
-        <%= link_to "https://www.instagram.com/ekologeek/", class:"footer-link mx-3", target:"_blank" do %>
-          <%= inline_svg "instagram.svg", width:"30" %>
-        <% end %>
         <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/",class:"footer-link mx-3", target:"_blank" do %>
-          <%= inline_svg "facebook.svg", width:"30" %>
+          <%= image_tag "facebook.png", width:"30" %>
         <% end %>
-        <%= link_to "https://www.youtube.com/user/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
-          <%= inline_svg "youtube.svg", width:"30" %>
+        <%= link_to "https://www.linkedin.com/company/defi-zero-dechet-pro/",class:"footer-link mx-3", target:"_blank" do %>
+          <%= image_tag "linkedin.png", width:"30" %>
         <% end %>
       </div>
     </div>
