--- a/app/views/result_comportamental_formulaires/your_behaviour.html.erb
+++ b/app/views/result_comportamental_formulaires/your_behaviour.html.erb
@@ -1,5 +1,5 @@
 <div class="container bg-white">
-  <h1 class="mt-5 mb-4 header text-primary text-center">DIAGNOSTIC COMPORTEMENTAL INDIVIDUEL</h1>
+  <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL INDIVIDUEL</h1>
 
 
   <p class="text-center mt-4">Progression : <b>page 5 sur 6</b> </p>
