bonne préparation du bilan structure

--- a/app/views/company_behaviour_results/step_four.html.erb
+++ b/app/views/company_behaviour_results/step_four.html.erb
@@ -1,5 +1,5 @@
 <div class="container bg-white">
-  <h1 class="mt-5 mb-4 header text-primary text-center">DIAGNOSTIC COMPORTEMENTAL DE LA STRUCTURE</h1>
+  <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL DE LA STRUCTURE</h1>
   <div class="text-center h-100 mt-5 ">
     <p>Vous avez terminé ce formulaire de diagnostic. Vos réponses sont bien enregistrées.</p>
     <p>Merci beaucoup.</p>
