--- a/app/views/company_behaviour_results/step_three.html.erb
+++ b/app/views/company_behaviour_results/step_three.html.erb
@@ -11,8 +11,10 @@
 
   <%= simple_form_for(@company_behaviour, method: :put, url: wizard_path) do |f| %>
 
+    <p class="mt-4"><b>7. </b>Combien d’action·s a·ont été mis·es en place dans votre structure depuis le début du Défi ZD des Pros ?</p>
+    <%= f.input :actions_nb_result, label: false, placeholder: "Nombre d'actions" %>
 
-    <p class="mt-4"><b>7. </b>Quelle·s action·s concrète·s pour la gestion et/ou la réduction des déchets est·sont actuellement menée·s dans votre structure ?</p>
+    <p class="mt-4"><b>8. </b>Quelle·s est·sont-elle·s ?</p>
     <div id='priority-action'>
       <%= f.simple_fields_for :result_actions do |result_action| %>
         <%= render 'result_action_fields', f: result_action %>
@@ -22,7 +24,7 @@
       </div>
     </div>
 
-    <p class="mt-4"><b>8.</b> Selon vous, en tant que référent·e, combien d’actions nouvellement mises en place par votre structure sont pratiquées par vos collaborateur·rice·s au quotidien ?</p>
+    <p class="mt-4"><b>9.</b> Selon vous, en tant que référent·e, combien d’actions nouvellement mises en place par votre structure sont pratiquées par vos collaborateur·rice·s au quotidien ?</p>
     <%= f.collection_radio_buttons :daily_actions_diag, ["Aucune action", "Très peu d’action", "Quelques actions", "La majorité des actions", "Toutes les actions", " Non communiqué"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -32,7 +34,7 @@
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
-      <%= f.button :submit, "Valider", class:"btn btn-primary bold" %>
+      <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
     </div>
 
   <% end %>
