--- a/app/views/result_comportamental_formulaires/start.html.erb
+++ b/app/views/result_comportamental_formulaires/start.html.erb
@@ -1,6 +1,17 @@
 <div class="container bg-white">
   <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL INDIVIDUEL</h1>
 
+ <p class="mb-0">Certaines questions porteront sur vos pratiques sur votre lieu de travail ainsi qu'à votre domicile. L'intérêt étant de connaitre le potentiel de transmission de vos connaissances et pratiques personnel vers votre lieu du travail et inversement.
+Pour chacune des propositions suivantes, veuillez indiquer dans quelle mesure elle s'applique à vous ou dans quelle mesure vous en êtes d’accord, selon l’échelle suivante :</p>
+  <ul>
+    <li>Pas du tout</li>
+    <li>Un peu</li>
+    <li>Moyennement</li>
+    <li>Beaucoup</li>
+    <li>Tout à fait</li>
+    <li> Non concerné</li>
+  </ul>
+
   <p class="text-center mt-4">Progression : <b>page 1 sur 6</b> </p>
   <div class="dots d-flex justify-content-center">
     <span class="blue"></span>
