--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <div class="container bg-white">
     <div class="container-soutenir">
-      <div id="diagnostic"></div>
+      <div id="bilan"></div>
       <h1 class="header text-primary pt-5 text-center">DONNÉES</h1>
-      <h2 class="green-bg mt-5">Diagnostics</h2>
+      <h2 class="green-bg mt-5">Bilan</h2>
 
       <div id="dechets"></div>
       <div class="text-center mt-4">
@@ -12,7 +12,7 @@
         <% end %>
         <% if current_user.referent? && current_user.company.company_behaviours.empty?  %>
           <%= link_to "Diagnostic comportemental Structure", new_company_behaviour_diag_path, class:"btn btn-primary bold" %>
-        <% elsif current_user.referent? && Date.today < "15/02/2019".to_date %>
+        <% elsif current_user.referent? && Date.today < current_user.company.project.diagnostic_end_at %>
           <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
         <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && current_user.company.company_behaviours.count == 1 %>
           <%= link_to "Bilan comportemental Structure", new_company_behaviour_result_path, class:"btn btn-primary bold" %>
@@ -21,9 +21,9 @@
         <% end %>
 
         <% if !current_user.company.trash_diagnostic.nil? %>
-          <% if current_user.user_behaviour_diag.nil?  %>
+          <% if current_user.user_behaviour_diag.nil? && Date.today < current_user.company.project.diagnostic_end_at %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-          <% elsif Date.today < "15/02/2019".to_date  %>
+          <% elsif Date.today < current_user.company.project.diagnostic_end_at %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
           <% end %>
 
