--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -35,7 +35,7 @@
             DONNÉES
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <%= link_to "Diagnostic", donnees_path(anchor: "diagnostic"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Bilan", donnees_path(anchor: "bilan"), class:"anchor dropdown-item text-primary"%>
             <%= link_to "Déchets de fonctionnement de votre structure", donnees_path(anchor: "dechets"), class:"anchor dropdown-item text-primary"%>
             <%= link_to "Collaborateur·rice·s de votre structure", donnees_path(anchor: "referent"), class:"anchor dropdown-item text-primary"%>
             <%= link_to "Votre structure dans le Défi", donnees_path(anchor: "structure"), class:"anchor dropdown-item text-primary"%>
