missing user informations in bilan

--- a/app/views/result_comportamental_formulaires/start.html.erb
+++ b/app/views/result_comportamental_formulaires/start.html.erb
@@ -12,9 +12,10 @@ Pour chacune des propositions suivantes, veuillez indiquer dans quelle mesure el
     <li> Non concerné</li>
   </ul>
 
-  <p class="text-center mt-4">Progression : <b>page 1 sur 6</b> </p>
+  <p class="text-center mt-4">Progression : <b>page 1 sur 7</b> </p>
   <div class="dots d-flex justify-content-center">
     <span class="blue"></span>
+    <span class=""></span>
     <span class=""></span>
     <span class=""></span>
     <span class=""></span>
