--- a/app/views/result_comportamental_formulaires/your_behaviour.html.erb
+++ b/app/views/result_comportamental_formulaires/your_behaviour.html.erb
@@ -2,13 +2,14 @@
   <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL INDIVIDUEL</h1>
 
 
-  <p class="text-center mt-4">Progression : <b>page 5 sur 6</b> </p>
+  <p class="text-center mt-4">Progression : <b>page 5 sur 7</b> </p>
   <div class="dots d-flex justify-content-center">
     <span class="blue"></span>
     <span class="blue"></span>
     <span class="blue"></span>
     <span class="blue"></span>
     <span class="blue"></span>
+    <span class=""></span>
     <span class=""></span>
   </div>
 
