--- a/app/views/result_comportamental_formulaires/after.html.erb
+++ b/app/views/result_comportamental_formulaires/after.html.erb
@@ -1,7 +1,7 @@
 <div class="container bg-white">
   <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL INDIVIDUEL</h1>
 
-  <p class="text-center mt-4">Progression : <b>page 6 sur 6</b> </p>
+  <p class="text-center mt-4">Progression : <b>page 6 sur 7</b> </p>
   <div class="dots d-flex justify-content-center">
     <span class="blue"></span>
     <span class="blue"></span>
@@ -9,6 +9,7 @@
     <span class="blue"></span>
     <span class="blue"></span>
     <span class="blue"></span>
+    <span class=""></span>
   </div>
 
   <%= simple_form_for(@user_behaviour_result, method: :put, url: wizard_path) do |f| %>
@@ -80,7 +81,7 @@
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
-      <%= f.button :submit, "Valider", class:"btn btn-primary bold" %>
+      <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
     </div>
 
   <% end %>
