--- a/app/views/result_comportamental_formulaires/no_action.html.erb
+++ b/app/views/result_comportamental_formulaires/no_action.html.erb
@@ -1,11 +1,12 @@
 <div class="container bg-white">
   <h1 class="mt-5 mb-4 header text-primary text-center">BILAN COMPORTEMENTAL INDIVIDUEL</h1>
 
-  <p class="text-center mt-4">Progression : <b>page 3 sur 6</b> </p>
+  <p class="text-center mt-4">Progression : <b>page 3 sur 7</b> </p>
   <div class="dots d-flex justify-content-center">
     <span class="blue"></span>
     <span class="blue"></span>
     <span class="blue"></span>
+    <span class=""></span>
     <span class=""></span>
     <span class=""></span>
   </div>
