--- a/app/views/result_comportamental_formulaires/user_infos.html.erb
+++ b/app/views/result_comportamental_formulaires/user_infos.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <%= simple_form_for(@user_behaviour_result, method: :put, url: wizard_path) do |f| %>
-    <p class="mt-4"><b>17. </b>Vous êtes :</p>
+    <p class="mt-4"><b>24. </b>Vous êtes :</p>
     <%= f.collection_radio_buttons :sex, ["Un homme", "Une femme", "Je ne souhaite pas le préciser"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -21,11 +21,11 @@
       </label>
     <% end %>
 
-    <p class="mt-4"><b>18. </b>Votre âge :</p>
+    <p class="mt-4"><b>25. </b>Votre âge :</p>
     <%= f.input :age, collection: 18..70, label: false %>
 
-    <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure :</p>
-    <%= f.input :seniority, collection: 0..50, label: false %>
+    <p class="mt-4"><b>26. </b>Depuis combien d'années travaillez-vous dans votre structure :</p>
+    <%= f.input :seniority, label: false %>
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
