--- a/app/views/result_comportamental_formulaires/your_behaviour.html.erb
+++ b/app/views/result_comportamental_formulaires/your_behaviour.html.erb
@@ -21,6 +21,9 @@
         <%= input.text %>
       </label>
     <% end %>
+    <% if @user_behaviour_result.errors.include?(:context_knowledge) %>
+      <p class="has-error">La question 12 est obligatoire</p>
+    <% end %>
 
     <p class="mt-4"><b>12.1 </b>Dites nous en plus</p>
     <%= f.input :context_knowledge_comment,label: false, placeholder: "Réponse courte"%>
@@ -31,6 +34,9 @@
         <%= input.radio_button %>
         <%= input.text %>
       </label>
+    <% end %>
+    <% if @user_behaviour_result.errors.include?(:concerned) %>
+      <p class="has-error">La question 13 est obligatoire</p>
     <% end %>
 
     <p class="mt-4"><b>13.1 </b>Dites nous en plus</p>
@@ -43,6 +49,9 @@
         <%= input.text %>
       </label>
     <% end %>
+    <% if @user_behaviour_result.errors.include?(:favorable_reduction) %>
+      <p class="has-error">La question 14 est obligatoire</p>
+    <% end %>
 
     <p class="mt-4"><b>15. </b>La réduction des déchets vous semble embêtante.</p>
     <%= f.collection_radio_buttons :crappy_reduction, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
@@ -51,6 +60,9 @@
         <%= input.text %>
       </label>
     <% end %>
+    <% if @user_behaviour_result.errors.include?(:crappy_reduction) %>
+      <p class="has-error">La question 15 est obligatoire</p>
+    <% end %>
 
     <p class="mt-4"><b>16. </b>La réduction des déchets de fonctionnement sur votre lieu du travail vous semble difficile.</p>
     <%= f.collection_radio_buttons :trash_reduction_hard, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
@@ -58,6 +70,9 @@
         <%= input.radio_button %>
         <%= input.text %>
       </label>
+    <% end %>
+    <% if @user_behaviour_result.errors.include?(:trash_reduction_hard) %>
+      <p class="has-error">La question 16 est obligatoire</p>
     <% end %>
     <p class="mt-4"><b>16.1 </b>Dites nous en plus</p>
     <%= f.input :trash_reduction_hard_comment, label: false, placeholder: "Réponse courte"%>
@@ -68,6 +83,9 @@
         <%= input.radio_button %>
         <%= input.text %>
       </label>
+    <% end %>
+    <% if @user_behaviour_result.errors.include?(:dedicated_employee) %>
+      <p class="has-error">La question 17 est obligatoire</p>
     <% end %>
     <p class="mt-4"><b>17.1 </b>Dites nous en plus</p>
     <%= f.input :dedicated_employee_comment, label: false, placeholder: "Réponse courte"%>
